fixed header width on smaller displays

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,6 @@ body {
 .container-secao-1 {
   display: flex;
   flex-direction: column;
-  border: 3px solid teal;
   width: 100%;
   height: auto;
   margin: 0 auto;
@@ -87,7 +86,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 3px solid salmon;
   width: 100%;
   height: auto;
 }
@@ -303,7 +301,6 @@ footer img {
 }
 
 @media (max-width: 1100px) {
-  header,
   .topo,
   .s1-anuncios,
   .container-secao-1,
